data/raw_logs/lexical/lex_6.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_6.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_6.c:1:24: error: too many decimal points in number
    1 | int main() { float f = 1.2.3; }
      |                        ^~~~~
